--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,40 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <title>Spotify</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-Premium Discover Help Download
+  <navbar>
+      <img class="spotylogo1" src="spotify-logo.png" alt="spotify-logo">
+    <ol class="listnav">
+      <li>Premium</li>
+      <li>Discover</li>
+      <li>Help</li>
+      <li>Download</li>
+    </ol>
+  </navbar>
+  <div class="clearfix"></div>
+  <section class="image1">
+    <h1 id="header">Music for everyone.</h1>
+    <p id="explanation">Spotify is now free on mobile, tablet and computer.
+    Listen to the right music, wherever you are.</p>
+    </section>
+  <section class="container">
+    <div>
+      <h2 id="header2">What’s on Spotify?</h2>
+    </div>
+    <div class="box1">
+      <img id="logo" src="music-icon.png" alt="music icon">
+      <h3 id="title">Millions of Songs</h3>
+      <p id="text1">There are millions of
+      songs on Spotify</p>
+    </div>
+    <div class="box2">
+      <img id="logo" src="high-quality-icon.png" alt="high-quality-icon">
+      <h3 id="title">HD Music</h3>
+      <p id="text2">Listen to music as if you
+          were listening live</p>
+    </div>
+    <div class="box3">
+      <img id="logo" src="devices-icon.png" alt="devices-icon">
+      <h3 id="title">Stream Everywhere</h3>
+      <p id="text3">Stream music on your
+      smartphone, tablet or
+      computer</p>
+      </div>
+  </section>
+  <div class="clearfix"></div>
 
-Music for everyone.
-Spotify is now free on mobile, tablet and computer.
-Listen to the right music, wherever you are.
-
-What’s on Spotify?
-
-Millions of Songs
-There are millions of
-songs on Spotify
-
-HD Music
-Listen to music as if you
-were listening live
-
-Stream Everywhere
-Stream music on your
-smartphone, tablet or
-computer
-
-It’s as yeezy as Kanye West.
-Search
-Know what you want to listen to?
-Just search and hit play.
-Browse
-Check out the latest charts,
-brand new releases and great
-playlists for right now.
-Discover
-Enjoy new music every Monday
-with your own personal playlist.
-Or sit back and enjoy Radio.
+  <section class="footer">
+      <img id="kanyewest" src="spotify-app.jpg" alt="spotify-app">
+      <img id="whitelogo" src="spotify-icon-white.png" alt="spotify-icon-white">
+    <h2 id="header3">It’s as yeezy as Kanye West.</h2>
+    <h3 id="subtitle">Search</h3>
+    <p id="text4">Know what you want to listen to?
+        Just search and hit play.</p>
+    <h3 id="subtitle2">Browse</h3>
+    <p id="text5">Check out the latest charts,
+        brand new releases and great
+        playlists for right now.</p>
+      <h3 id="subtitle3">Discover</h3>
+      <p id="text6">Enjoy new music every Monday
+          with your own personal playlist.
+          Or sit back and enjoy Radio.</p>
+  </section>
 </body>
 </html>
