--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Spotify</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <navbar>
+
       <img class="spotylogo1" src="spotify-logo.png" alt="spotify-logo">
     <ol class="listnav">
       <li>Premium</li>
